--- a/Direct.CSV.Library.csproj
+++ b/Direct.CSV.Library.csproj
@@ -63,7 +63,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Dlls\Designer\7.5DLL.zip" />
+    <None Include="Dlls\Designer\Before7.5DLL.zip" />
     <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dlls\Automation Studio\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
